Added email capability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/photos?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=password
-#spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.driver-class-name = org.postgresql.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/photos?autoReconnect=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=password
+spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=5
 spring.datasource.tomcat.test-on-borrow=true
@@ -26,6 +26,16 @@ spring.thymeleaf.cache=false
 server.port = 8080
 
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=name.surname@gmail.com
+spring.mail.password=V3ry_Str0ng_Password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.scheduler.persistence.enabled=false
+spring.mail.scheduler.persistence.redis.embedded=false
+spring.mail.scheduler.persistence.redis.enabled=false
 
 
 # ===============================
