--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>it.ozimov</groupId>
+			<artifactId>spring-boot-email-core</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
