--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,19 +24,19 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 server.port = 8080
-
-
+# ===============================
+# = Email configurations
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=name.surname@gmail.com
-spring.mail.password=V3ry_Str0ng_Password
+spring.mail.username=bot.orion.bot@gmail.com
+spring.mail.password=orionpass
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.scheduler.persistence.enabled=false
 spring.mail.scheduler.persistence.redis.embedded=false
 spring.mail.scheduler.persistence.redis.enabled=false
-
 
 # ===============================
 # = Cloudinary configurations
